@@ -5,18 +5,20 @@ import com.br.pruma.application.dto.response.AuditoriaResponseDTO;
 import com.br.pruma.application.mapper.AuditoriaMapper;
 import com.br.pruma.application.service.AuditoriaService;
 import com.br.pruma.core.domain.Auditoria;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/pruma/v1/auditorias")
-@Api(tags = "Auditorias")
+@Tag(name = "Auditorias", description = "Operações de auditoria")
 public class AuditoriaController {
 
     private final AuditoriaService auditoriaService;
@@ -28,43 +30,51 @@ public class AuditoriaController {
     }
 
     @GetMapping
-    @ApiOperation("Listar auditorias")
+    @Operation(summary = "Listar auditorias")
     public ResponseEntity<List<AuditoriaResponseDTO>> listarTodos() {
-        List<Auditoria> entidades = auditoriaService.listarTodos();
-        List<AuditoriaResponseDTO> dtos = entidades.stream()
+        List<AuditoriaResponseDTO> dtos = auditoriaService.listarTodos()
+                .stream()
                 .map(auditoriaMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
+
     @GetMapping("/{id}")
-    @ApiOperation("Buscar auditoria por ID")
-    public ResponseEntity<AuditoriaResponseDTO> buscarPorId(@PathVariable Integer id) {
-        Optional<Auditoria> entidade = auditoriaService.buscarPorId(id);
-        return entidade.map(e -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(e)))
+    @Operation(summary = "Buscar auditoria por ID")
+    public ResponseEntity<AuditoriaResponseDTO> buscarPorId(@PathVariable UUID id) {
+        return auditoriaService.buscarPorId(id)
+                .map(e -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(e)))
                 .orElse(ResponseEntity.notFound().build());
     }
+
     @PostMapping
-    @ApiOperation("Criar auditoria")
-    public ResponseEntity<AuditoriaResponseDTO> criar(@RequestBody AuditoriaRequestDTO dto) {
-        Auditoria nova = auditoriaMapper.toEntity(dto);
-        Auditoria salva = auditoriaService.salvar(nova);
-        return ResponseEntity.ok(auditoriaMapper.toResponseDTO(salva));
+    @Operation(summary = "Criar nova auditoria")
+    public ResponseEntity<AuditoriaResponseDTO> criar(@Valid @RequestBody AuditoriaRequestDTO dto) {
+        Auditoria salva = auditoriaService.salvar(auditoriaMapper.toEntity(dto));
+        AuditoriaResponseDTO resposta = auditoriaMapper.toResponseDTO(salva);
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{id}")
+                .buildAndExpand(salva.getId())
+                .toUri();
+        return ResponseEntity.created(location).body(resposta);
     }
+
     @PutMapping("/{id}")
-    @ApiOperation("Atualizar auditoria")
-    public ResponseEntity<AuditoriaResponseDTO> atualizar(@PathVariable Integer id, @RequestBody AuditoriaRequestDTO dto) {
-        if (auditoriaService.buscarPorId(id).isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        Auditoria entidade = auditoriaMapper.toEntity(dto);
-        entidade.setId(id);
-        Auditoria atualizada = auditoriaService.salvar(entidade);
-        return ResponseEntity.ok(auditoriaMapper.toResponseDTO(atualizada));
+    @Operation(summary = "Atualizar auditoria existente")
+    public ResponseEntity<AuditoriaResponseDTO> atualizar(
+            @PathVariable UUID id,
+            @Valid @RequestBody AuditoriaRequestDTO dto) {
+        return auditoriaService.atualizar(id, auditoriaMapper.toEntity(dto))
+                .map(salva -> ResponseEntity.ok(auditoriaMapper.toResponseDTO(salva)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/{id}")
-    @ApiOperation("Deletar auditoria")
-    public ResponseEntity<Void> deletar(@PathVariable Integer id) {
+    @Operation(summary = "Deletar auditoria por ID")
+    public ResponseEntity<Void> deletar(@PathVariable UUID id) {
+        if (auditoriaService.buscarPorId(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
         auditoriaService.deletar(id);
         return ResponseEntity.noContent().build();
     }
